--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -21,6 +21,7 @@
 		"@modern-ui/tokens": "*",
 		"@modern-ui/ts-config": "*",
 		"@storybook/addon-a11y": "^6.5.16",
+		"@storybook/storybook-deployer": "^2.8.16",
 		"phosphor-react": "^1.4.1",
 		"polished": "^4.2.2",
 		"react": "^18.2.0",
@@ -28,6 +29,7 @@
 	},
 	"scripts": {
 		"dev": "start-storybook -p 6006",
-		"build": "build-storybook"
+		"build": "build-storybook",
+		"deploy-storybook": "storybook-to-ghpages"
 	}
 }
