--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@modern-ui/react",
-	"version": "1.0.0",
-	"description": "",
+	"version": "2.0.0",
+	"description": "Library",
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
 	"types": "./dist/index.d.ts",
