--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@modern-ui/react",
-	"version": "2.0.0",
+	"name": "@modernui/react",
+	"version": "3.0.0",
 	"description": "Library",
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -13,8 +13,8 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
-		"@modern-ui/tokens": "*",
-		"@modern-ui/ts-config": "*",
+		"@modernui/tokens": "*",
+		"@modernui/ts-config": "*",
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
 		"react": "^18.2.0",
