--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@modern-ui/tokens",
-	"version": "2.0.0",
+	"name": "@modernui/tokens",
+	"version": "3.0.0",
 	"description": "Tokens",
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -14,7 +14,7 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
-		"@modern-ui/ts-config": "*",
+		"@modernui/ts-config": "*",
 		"tsup": "^6.5.0",
 		"typescript": "^4.9.4"
 	}
