--- a/packages/ts-config/package.json
+++ b/packages/ts-config/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@modern-ui/ts-config",
-	"version": "1.0.0",
+	"name": "@modernui/ts-config",
+	"version": "2.0.0",
 	"private": true,
 	"license": "MIT"
 }
