add ci at turbo repo cache

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -18,6 +18,9 @@ jobs:
       node-version: 16
 
    - run: npm ci
+     env:
+      TURBO_TOKEN: AJEwsPcMa0ImxzAGfEUhEZX9
+      TURBO_TEAM: fillipeaugusto
 
    - run: npm run build
 
