--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@modernui/react",
-	"version": "4.0.0",
+	"version": "5.0.0",
 	"description": "Library",
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -22,6 +22,7 @@
 		"typescript": "^4.9.4"
 	},
 	"dependencies": {
+		"@radix-ui/react-alert-dialog": "^1.0.2",
 		"@radix-ui/react-avatar": "^1.0.1",
 		"@radix-ui/react-checkbox": "^1.0.1",
 		"@stitches/react": "^1.2.8",
